--- a/judgev2/templates/users/base.html
+++ b/judgev2/templates/users/base.html
@@ -15,23 +15,23 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/codejudge_django/">Codejudge</a>
+        <a class="navbar-brand" href="/judgev2/">Codejudge</a>
       </div>
     
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-center">
-        <li><a href="/codejudge_django/problems">Problems</a></li>
-        <li><a href="/codejudge_django/leaderboard/">Leader Board</a></li>
-        <li><a href="/codejudge_django/submission/">Submissions</a></li>
+        <li><a href="/judgev2/problems">Problems</a></li>
+        <li><a href="/judgev2/leaderboard/">Leader Board</a></li>
+        <li><a href="/judgev2/submission/">Submissions</a></li>
       </ul>
       
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user.username|capfirst }} <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><a href="/codejudge_django/account/">Account Settings</a></li>
+            <li><a href="/judgev2/account/">Account Settings</a></li>
             <li class="divider"></li>
-            <li><a href="/codejudge_django/logout/">Logout</a></li>
+            <li><a href="/judgev2/logout/">Logout</a></li>
           </ul>
         </li>
       </ul>
