--- a/judgev2/templates/admin_site/base.html
+++ b/judgev2/templates/admin_site/base.html
@@ -2,7 +2,7 @@
   <title>Admin Panel</title>
   {% load staticfiles %}
   <link rel="stylesheet" type="text/css" href="{% static 'bootstrap/css/bootstrap.min.css' %}" />
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <script src="{% static 'bootstrap/js/jquery.min.js' %}"></script>
   <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
 </head>
 <body>
@@ -15,7 +15,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/codejudge_django/">Codejudge</a>
+        <a class="navbar-brand" href="/judgev2/admin_site/">Codejudge</a>
       </div>
     
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
