--- a/judgev2/templates/users/account.html
+++ b/judgev2/templates/users/account.html
@@ -1,50 +1,58 @@
 {% include "users/base.html" %}
 <div class="container-fluid">
 	<div class="row-fluid">
-		<div class="col-md-1"></div>
-		<div class="col-md-4">
-			<h3>Welcome {{ user.username }}</h3>
-			<p>Here you can change your account settings</p><br>
-			<h4>Change Password</h4>
+		
+    <div class="col-xs-12">
+      <h3>Welcome {{ user.username }}</h3>
+      <p>Here you can change your account settings</p><hr>
+    </div>
+    <div class="col-xs-1"></div>
+    <div class="col-xs-4">
+      <h4>Change Password</h4>
       {% if error == 2 %}
-        <span class="label label-danger">Old password do not match... Try again</span>
-        <br><br>
+        <span class="label label-danger">Current password misspelled. Are you drunk?</span><br>
       {% elif error == 1 %}
-        <span class="label label-success">Your password updated successfully</span>
-        <br><br>
+        <span class="label label-success">Password updated successfully</span><br>
+      {% else %}
+        <br>
       {% endif %}
+      <br>
       <form role="form" method="POST" action="/judgev2/change_password/">
       {% csrf_token %}
-  				<div class="form-group">
-  				  <label for="exampleInputEmail1">Old Password</label>
-  				  <input required type="password" class="form-control" id="exampleInputEmail1" placeholder="Old Password" name="old_password">
-  				</div>
-  				<div class="form-group">
+          <div class="form-group">
+            <label for="exampleInputEmail1">Current Password</label>
+            <input required type="password" class="form-control" id="exampleInputEmail1" placeholder="Current Password" name="old_password">
+          </div>
+          <div class="form-group">
                   <label for="exampleInputPassword1">New Password</label>
                   <input type="password" name="new_password" class="form-control" id="exampleInputPassword1" placeholder="New Password">
                 </div>
                 <div class="form-group">
-  				  <label for="exampleInputPassword2">New Password (again)</label>
-  				  <input required type="password" class="form-control" id="exampleInputPassword2" placeholder="New Password (again)">
-  				</div>
-  				<input type="submit" class="btn btn-primary" value="Change Password">
-			</form>
-			<hr>
-			<h4>Change Email Id</h4>
-      {% if error %}
-        <span class="label label-danger">Unable to update email</span>
+            <label for="exampleInputPassword2">New Password (again)</label>
+            <input required type="password" class="form-control" id="exampleInputPassword2" placeholder="New Password (again)">
+          </div>
+          <input type="submit" class="btn btn-primary" value="Change Password">
+      </form>
+      <hr>
+    </div>
+    <div class="col-xs-2"></div>
+    <div class="col-xs-4">
+      <h4>Change Email Id</h4>
+      {% if error == 3 %}
+        <span class="label label-danger">Unable to update email.</span>
+      {% elif error == 4 %}
+        <span class="label label-success">Email is updated sucessfully.</span>
       {% else %}
-        <span class="label label-success">Your email is updated sucessfully</span>
       {% endif %}
       <br><br>
       <form role="form" method="POST" action="/judgev2/change_email/">
       {% csrf_token %}
-  				<div class="form-group">
-            <label for="exampleInputEmail1">New Email Id</label>
-            <input required type="email" class="form-control" id="exampleInputEmail1" placeholder="New Email Id" name="email">
+          <div class="form-group">
+            <label for="exampleInputEmail1">New Email ID</label>
+            <input required type="email" class="form-control" id="exampleInputEmail1" placeholder="New Email ID" name="email">
           </div>
-  				<input type="submit" class="btn btn-primary" value="Change Email">
-			</form>
+          <input type="submit" class="btn btn-primary" value="Change Email">
+      </form>
 		</div>
 	</div>
 </div>
