--- a/judgev2/templates/users/base.html
+++ b/judgev2/templates/users/base.html
@@ -2,7 +2,7 @@
   <title>Codejudge</title>
   {% load staticfiles %}
   <link rel="stylesheet" type="text/css" href="{% static 'bootstrap/css/bootstrap.min.css' %}" />
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <script src="{% static 'bootstrap/js/jquery.min.js' %}"></script>
   <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
 </head>
 <body>
