--- a/judgev2/templates/users/login.html
+++ b/judgev2/templates/users/login.html
@@ -11,7 +11,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/judgev2">Codejudge</a>
+        <a class="navbar-brand" href="/codejudge_django">Codejudge</a>
       </div>
     </div>
   </nav>
@@ -23,26 +23,30 @@
         <h4>Login</h4>
         Please login to continue
         <hr>
-        {% if error %}
-        <span class="badge" style="background-color:#a00;">You're not registered or you provided invalid credentials.</span><br><br>
-        {% endif %}
-        <form role="form" method="POST" action="/judgev2/login/" >
+        <span id="errors" style="background-color:#a00;"></span>
+        <br><br>
+        <form role="form" id="loginForm"  action="javascript:login()" >
           {% csrf_token %}
           <div class="form-group">
           <label for="exampleInputUsername">Username</label>
-          <input required type="text" class="form-control" id="exampleInputUsername" placeholder="Enter username" name="username">
+          <input required type="text" class="form-control" id="username" placeholder="Enter username" name="username">
           </div>
           <div class="form-group">
           <label for="exampleInputPassword1">Password</label>
-          <input required type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password">
+          <input required type="password" class="form-control" id="password" placeholder="Password" name="password">
           </div>
+          {% if next %}
+            <input type="hidden" name="next" value="{{ next }}">
+          {% else %}
+            <input type="hidden" name="next" value="/judgev2/">
+          {% endif %}
           <input type="submit" class="btn btn-primary" value="Login">
         </form>
         <hr>
       </div>
       <style type="text/css">
- 					#your_col{border-left: 1px solid black;}
-  		</style>
+          #your_col{border-left: 1px solid black;}
+      </style>
       <div class="col-md-1"></div>
       <div class="col-md-1" id="your_col">
       <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -52,19 +56,21 @@
         <h4>New Coders Register here</h4>
         Register as a new coder to continue
         <hr>
-        <form role="form" method="POST" action = "/judgev2/register/">
+        <span id="newUserErrors" style="background-color:#a00;"></span>
+        <br><br>
+        <form role="form" id="addUserForm" action = "javascript:addUser()">
         {% csrf_token %}
           <div class="form-group">
             <label for="exampleInputEmail1">Username</label>
-            <input required type="text" class="form-control" id="exampleInputUsername" placeholder="The Chosen One" name="user_name">
+            <input required type="text" class="form-control" id="newUser" placeholder="The Chosen One" name="user_name">
           </div>
           <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
-            <input required type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email id" name="email">
+            <input required type="email" class="form-control" id="newUserEmail" placeholder="Enter email id" name="email">
           </div>
           <div class="form-group">
             <label for="exampleInputPassword1">Password</label>
-            <input required type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="pass_word">
+            <input required type="password" class="form-control" id="newUserPassword" placeholder="Password" name="pass_word">
           </div>
           <button type="submit" class="btn btn-primary">Register</button>
         </form>
@@ -75,3 +81,123 @@
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+
+<script type="text/javascript">
+    function login(){
+      var username = document.getElementById("username").value;
+      var password = document.getElementById("password").value;
+      var done = false;
+      var error; 
+      if(!username && !password){
+        error = "Oh you must be having a name!"
+        $("#errors").html(error).addClass("badge");
+      }else if(!username){
+        error = "Oh you must be having a name!"
+        $("#errors").html(error).addClass("badge");
+      }else if(!password){
+        error = "Oh you must be having a passkey!"
+        $("#errors").html(error).addClass("badge");
+      }else{
+        done = true;
+      }
+      if(done){
+        var loginForm = $("#loginForm").serialize();
+        $.ajax({
+          type:"POST",
+          url:"/judgev2/login/",
+          dataType:"json",
+          data: loginForm,
+          success:function(data){
+            if(data.errors){
+              error = "Are you drunk or not registered?";
+              $("#errors").html(error).addClass("badge");
+              done=false;
+            }else{
+                window.location.href = "/judgev2"
+            }
+          }
+        });
+      }
+    }
+
+    function addUser(){
+      var user = document.getElementById("newUser").value;
+      var password = document.getElementById("newUserPassword").value;
+      var email = document.getElementById("newUserEmail").value;
+      var done = false;
+      var error;
+      if(!user && !password && !email){
+        error = "Oh you must be having a name!";
+        $("#newUserErrors").html(error).addClass("badge");
+      }else if(!user && !password){
+        error = "Oh you must be having a name!";
+        $("#newUserErrors").html(error).addClass("badge");  
+      }else if(!user && !email){
+        error = "Oh you must be having a name!";
+        $("#newUserErrors").html(error).addClass("badge");
+      }else if(!email && !password){
+        error = "You surely need a password friend!";
+        $("#newUserErrors").html(error).addClass("badge");
+      }else if(!user){
+        error = "Oh you must be having a name!";
+        $("#newUserErrors").html(error).addClass("badge");
+      }else if(!password){
+        error = "You surely need a password friend!";
+        $("#newUserErrors").html(error).addClass("badge");
+      }else if(!email){
+        error = "Haven't you got an email?";
+        $("#newUserErrors").html(error).addClass("badge");
+      }else if(user.toLowerCase()=="admin"){
+        error = "Admin is actually your daddy!";
+        $("#newUserErrors").html(error).addClass("badge");
+      }else{
+        done = true;
+      }
+      if(done){
+        var addUserForm = $("#addUserForm").serialize();
+        $.ajax({
+          type:"POST",
+          url:"/judgev2/register/",
+          dataType:"json",
+          data: addUserForm,
+          success:function(data){
+            if(data.errors){
+              error = "That fellow already exists!";
+              $("#newUserErrors").html(error).addClass("badge");
+              done=false;
+            }else{
+                window.location.href = "/judgev2"
+            }
+          }
+        });
+      }
+    }
+    // using jQuery
+    function getCookie(name) {
+        var cookieValue = null;
+        if (document.cookie && document.cookie != '') {
+            var cookies = document.cookie.split(';');
+            for (var i = 0; i < cookies.length; i++) {
+                var cookie = jQuery.trim(cookies[i]);
+                // Does this cookie string begin with the name we want?
+                if (cookie.substring(0, name.length + 1) == (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
+    var csrftoken = getCookie('csrftoken');
+    function csrfSafeMethod(method) {
+        // these HTTP methods do not require CSRF protection
+        return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+    }
+    $.ajaxSetup({
+        beforeSend: function(xhr, settings) {
+            if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+                xhr.setRequestHeader("X-CSRFToken", csrftoken);
+            }
+        }
+    });
+</script>
