--- a/judgev2/templates/problems/index.html
+++ b/judgev2/templates/problems/index.html
@@ -6,7 +6,7 @@
                 <td><b>S. No.</b></td>
                 <td><b>Name</b></td>
                 <td><b>Points</b></td>
-                <td><b>Time Limit</b></td>
+                <td><b>Time Limit (ms)</b></td>
                 <td><b>Solved By</b></td>
             </tr>
             {% for prob in problems %}
