--- a/judgev2/templates/users/base.html
+++ b/judgev2/templates/users/base.html
@@ -22,7 +22,7 @@
       <ul class="nav navbar-nav navbar-center">
         <li><a href="/judgev2/problems">Problems</a></li>
         <li><a href="/judgev2/leaderboard/">Leader Board</a></li>
-        <li><a href="/judgev2/submission/">Submissions</a></li>
+        <li><a href="/judgev2/submissions/">Submissions</a></li>
       </ul>
       
       <ul class="nav navbar-nav navbar-right">
