--- a/judgev2/templates/users/login.html
+++ b/judgev2/templates/users/login.html
@@ -11,7 +11,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/codejudge_django">Codejudge</a>
+        <a class="navbar-brand" href="/judgev2">Codejudge</a>
       </div>
     </div>
   </nav>
